Added solution for addtwonumbers